--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dat.gui": "^0.7.9",
     "lil-gui": "^0.18.1",
-    "three": "^0.148.0"
+    "three": "^0.148.0",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
