--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
+    "gsap": "^3.11.5",
     "lil-gui": "^0.18.1",
     "three": "^0.148.0",
     "vite-plugin-glsl": "^1.1.2"
